fixed css jumping container on reload issues

--- a/src/Components/Badges/Badge.style.scss
+++ b/src/Components/Badges/Badge.style.scss
@@ -25,6 +25,8 @@
         justify-content: center;
         align-items: center;
         text-align: center;
+        white-space: normal;
+
 
         .modal-header {
             text-align: center;
@@ -43,6 +45,11 @@
             font-size: 32px;
             color: $lighter-blue;
             transition: 0.5s ease-in-out;
+        }
+
+        p {
+            white-space: normal;
+
         }
 
     }
